# MpvPlayer

./: .gitignore  CMakeLists.txt  README.md
include/: MpvPlayer.hpp
libmpv/: CMakeLists.txt
libmpv/Windows/: dll2lib.bat  libmpv-2.def  libmpv-2.lib  mpv.lib
sample/: sample.cpp  sample.hpp  sample.qml  sample.qrc
src/: MpvPlayer.cpp  libmpv_qthelper.hpp
